프로젝트: Mongoose 접속용 모듈 생성

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 4000
 MYSQL_USER = root
 MYSQL_PASSWORD = 12345678
 MYSQL_DB = board_db
+
+MONGO_DB_URI = mongodb+srv://0l0jjo:admin1234@cluster0.nuiayv2.mongodb.net/?retryWrites=true&w=majority
